# optiq-ai

api/: Cargo.toml
api/src/: main.rs
api/src/controllers/: wok.rs
backend/: Cargo.toml
backend/src/baorl/interface/: cache.rs
backend/src/baorl/python/: environment.py  policy_gradient.py  q_learning.py  train.py
backend/src/baorl/rust/: brute_force.rs
backend/src/db/: postgres.rs
backend/src/plansense/: mod.rs
backend/src/plansense/caching/: wok_cache.rs
backend/src/plansense/clustering/: dbscan.rs  dbscan_test.rs  gmm.rs  gmm_test.rs
backend/src/plansense/fingerprint/: explain.rs  fingerprint.rs
backend/src/wok/wokcore/: coop.rs  design.rs  search.rs
backend/src/wok/woksynth/: generator.rs
backend/src/wokeval/: cost.rs  io_model.rs
infra/docker/: api.Dockerfile  plansense.Dockerfile  wokcore.Dockerfile
k8s/manifests/crds/: queryplan.yaml  wokdesign.yaml
k8s/manifests/deployments/: api-deployment.yaml  plansense-deployments.yaml  wokcore-deployment.yaml
k8s/manifests/services/: plansense-service.yaml  wokcore-service.yaml
k8s/operator/: Cargo.toml
k8s/operator/src/: main.rs
skewgen/src/baorl/: sla_workloads.rs
