[package]
name = "optiq-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["tracing", "serde_json"]
tracing = ["tracing", "tracing-subscriber"]
serde_json = ["serde", "serde_json"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "api",
    "core",
    "db",
    "models",
    "services",
]

[profile.dev]
opt-level = 1